--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -10,6 +10,15 @@
   margin-bottom: 10px;
 }
 
+.popup__input_type_error {
+  border-bottom-color: #FF0000;
+}
+
+.popup__error_visible {
+  font-size: 12px;
+  color: #FF0000;
+}
+
 .popup__input:last-of-type {
   margin-bottom: 0;
 }
